# csyncmer_fast

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  benchmarking.h  circular_array.h  csyncmer_fast.h  example.c  hashing.h  implementations.h  plot_result.py  pyproject.toml  rescan.h  setup.py  test.c  test.sh  test_correctness.sh  test_speed.sh  utils.h
.github/workflows/: build-docker.yml  c_compilation.yml  c_speed_bench_build.yml  compile-check.yml  python-build.yml
cpu_info/: dell_precision_5560.txt  dell_r.txt  m_2010.txt  m_2014.txt  maestro_2499.txt
dev/: benchmarking.h  csyncmer_fast_iterator.h  hashing.h  implementations.h
include/csyncmer_fast/: circular_array.h  csyncmer_fast_iterator.h  generator.h  hashing.h  implementations.h  iterator.h  iterator_syng.h  nthash_wrapper.h  utils.h
misc/bench/: Makefile  benchmark.cpp
misc/code/: legacy_infrastructure.hpp  syncmer_nthash128.hpp  syncmer_nthash32.hpp  syncmer_nthash64.hpp  syncmer_seqhash.hpp
misc/fastq/: Makefile  bench_syncmer_fastq.c  bench_syncmer_fastq.rs  csyncmer_fastq.h  (+4 more)
misc/python/: .gitignore  Dockerfile  MANIFEST.in  docker-compose.yml  pyproject.toml  setup.py
misc/python/csyncmer_fast/: __init__.py  _bindings.cpp
misc/python/tests/: speed_benchmark.py  unit_test.py
python/: pyproject.toml  setup.py
python/csyncmer_fast/: __init__.py  _bindings.cpp
scripts/: plot_result.py  profile.sh  test_correctness.sh  test_speed.sh  test_speed_cluster.sh
src/: benchmarking.h  circular_array.h  fasta_reader.h  implementations.h
syng/: syng_syncmers.h  utils_d.c  utils_d.h
tests/: test.c  tiny_test.cpp
(+54 files in other folders)
