[build-system]
requires = [
    "setuptools>=61.0",
    "wheel", 
    "pybind11>=2.11", 
    "pytest>=7.0",
    "pytest-cov",
    ]
build-backend = "setuptools.build_meta"

[project]
name = "csyncmer_fast"
version = "0.1.0"
description = "Fast syncmer generation using nthash on single thread."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
testpaths = ["tests/python_tests"]
python_files = ["test_*.py"]