[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "pybind11>=2.11",
    ]
build-backend = "setuptools.build_meta"

[project]
name = "csyncmer_fast"
version = "0.2.0"
description = "Fast closed syncmer detection using ntHash rolling hash."
# readme lives at repo root; omitted here to avoid setuptools path restriction
# readme = "../../README.md"
requires-python = ">=3.8"
dependencies = ["numpy"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "unit_test.py"]
